--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ИИ для подготовки к ЕГЭ по физике</title>
+    <title>Как ИИ может помочь подготовиться к ЕГЭ по физике</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
@@ -38,34 +38,5 @@
         <p>&copy; 2025 Подготовка к ЕГЭ по физике с помощью ИИ</p>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        // Динамическое обновление формул через API
-        $(document).ready(function() {
-            $.getJSON('/api/formulas', function(data) {
-                let formulaList = $('#formula-list');
-                formulaList.empty();
-
-                $.each(data, function(topic, subtopics) {
-                    let topicDiv = $('<div class="topic"></div>').append('<h3>' + topic + '</h3>');
-
-                    $.each(subtopics, function(subTopic, details) {
-                        let subTopicDiv = $('<div class="sub-topic"></div>')
-                            .append('<h4>' + subTopic + '</h4>')
-                            .append('<p>' + details['описание'] + '</p>')
-                            .append('<ul></ul>');
-                        
-                        $.each(details['формулы'], function(index, formula) {
-                            subTopicDiv.find('ul').append('<li><strong>' + formula['формула'] + '</strong>: ' + formula['описание'] + '</li>');
-                        });
-
-                        topicDiv.append(subTopicDiv);
-                    });
-
-                    formulaList.append(topicDiv);
-                });
-            });
-        });
-    </script>
 </body>
 </html>
