--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,3 @@
-/* style.css */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -17,20 +16,35 @@ h1 {
     margin: 0;
 }
 
-section {
-    padding: 20px;
-    margin: 20px;
-}
-
 h2 {
     color: #34495E;
+    margin-top: 20px;
 }
 
 #formula-list {
     background-color: white;
     border-radius: 8px;
-    padding: 10px;
+    padding: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+}
+
+.topic {
+    margin-bottom: 20px;
+}
+
+.sub-topic {
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+ul {
+    list-style-type: none;
+    padding-left: 20px;
+}
+
+li {
+    margin-bottom: 5px;
 }
 
 footer {
