--- a/static/style.css
+++ b/static/style.css
@@ -38,13 +38,27 @@ h2 {
     margin-bottom: 10px;
 }
 
+button {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    margin-top: 5px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+button:hover {
+    background-color: #2980b9;
+}
+
 ul {
     list-style-type: none;
     padding-left: 20px;
 }
 
 li {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 footer {
