--- a/static/style.css
+++ b/static/style.css
@@ -42,10 +42,11 @@ button {
     background-color: #3498db;
     color: white;
     border: none;
-    padding: 5px 10px;
+    padding: 10px;
     margin-top: 5px;
     cursor: pointer;
     font-size: 14px;
+    border-radius: 5px;
 }
 
 button:hover {
