--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,9 @@
     <section class="formulas">
         <h2>Формулы по физике</h2>
         <div id="formula-list">
+            <!-- Выводим все данные JSON для проверки -->
+            <pre>{{ formulas | tojson(indent=2) }}</pre>
+
             {% for topic, subtopics in formulas.items() %}
                 <div class="topic">
                     <h3>{{ topic }}</h3>
