--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> <!-- Указываем кодировку UTF-8 для правильного отображения -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Как ИИ может помочь подготовиться к ЕГЭ по физике</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
